--- a/BuddhaBowls/UserControls/PAndLControl.xaml
+++ b/BuddhaBowls/UserControls/PAndLControl.xaml
@@ -21,8 +21,8 @@
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <DataGrid x:Name="dataGrid" ItemsSource="{Binding Summaries}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                                  CanUserReorderColumns="False" IsReadOnly="True" AutoGenerateColumns="False" CanUserSortColumns="False"
-                                  CanUserAddRows="False" Margin="0, 0, 0, 20">
+                                  CanUserReorderColumns="False" IsReadOnly="{Binding ReadOnly}" AutoGenerateColumns="False" CanUserSortColumns="False"
+                                  CanUserAddRows="False" Margin="0, 0, 0, 20" RowEditEnding="dataGrid_RowEditEnding">
                             <DataGrid.Columns>
                                 <DataGridTextColumn Binding="{Binding Name}" Width="1*">
                                     <DataGridTextColumn.HeaderTemplate>
@@ -42,16 +42,16 @@
                                         </DataTemplate>
                                     </DataGridTextColumn.HeaderTemplate>
                                 </DataGridTextColumn>
-                                <DataGridTextColumn Header="% of Sales" Binding="{Binding Path=WeekPBudget, StringFormat=p}" Width="1*" />
+                                <DataGridTextColumn Header="% of Sales" Binding="{Binding Path=WeekPBudget, StringFormat=p}" Width="1*" IsReadOnly="True"/>
                                 <DataGridTextColumn Header="Budget" Binding="{Binding Path=WeekBudget, StringFormat=c}" Width="1*" />
-                                <DataGridTextColumn Header="Var $" Binding="{Binding Path=WeekVar, StringFormat=c}" Width="1*" />
-                                <DataGridTextColumn Header="Var %" Binding="{Binding Path=WeekPVar, StringFormat=p}" Width="1*" />
-                                <DataGridTextColumn Header="% of Sales" Binding="{Binding Path=PeriodPSales, StringFormat=p}" Width="1*" />
-                                <DataGridTextColumn Header="PTD" Binding="{Binding Path=PeriodSales, StringFormat=c}" Width="1*" />
-                                <DataGridTextColumn Header="% of Sales" Binding="{Binding Path=PeriodPBudget, StringFormat=p}" Width="1*" />
+                                <DataGridTextColumn Header="Var $" Binding="{Binding Path=WeekVar, StringFormat=c}" Width="1*" IsReadOnly="True"/>
+                                <DataGridTextColumn Header="Var %" Binding="{Binding Path=WeekPVar, StringFormat=p}" Width="1*" IsReadOnly="True"/>
+                                <DataGridTextColumn Header="% of Sales" Binding="{Binding Path=PeriodPSales, StringFormat=p}" Width="1*" IsReadOnly="True"/>
+                                <DataGridTextColumn Header="PTD" Binding="{Binding Path=PeriodSales, StringFormat=c}" Width="1*" IsReadOnly="True"/>
+                                <DataGridTextColumn Header="% of Sales" Binding="{Binding Path=PeriodPBudget, StringFormat=p}" Width="1*" IsReadOnly="True"/>
                                 <DataGridTextColumn Header="Budget" Binding="{Binding Path=PeriodBudget, StringFormat=c}" Width="1*" />
-                                <DataGridTextColumn Header="Var $" Binding="{Binding Path=PeriodVar, StringFormat=c}" Width="1*" />
-                                <DataGridTextColumn Header="Var %" Binding="{Binding Path=PeriodPVar, StringFormat=p}" Width="1*" />
+                                <DataGridTextColumn Header="Var $" Binding="{Binding Path=PeriodVar, StringFormat=c}" Width="1*" IsReadOnly="True"/>
+                                <DataGridTextColumn Header="Var %" Binding="{Binding Path=PeriodPVar, StringFormat=p}" Width="1*" IsReadOnly="True"/>
                             </DataGrid.Columns>
                         </DataGrid>
                     </DataTemplate>
