--- a/BuddhaBowls/UserControls/BreakdownDisplay.xaml
+++ b/BuddhaBowls/UserControls/BreakdownDisplay.xaml
@@ -33,9 +33,9 @@
                         <ColumnDefinition Width="3*" />
                         <ColumnDefinition Width="1*" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock Text="Shipping Cost" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    <TextBlock Text="{Binding Path=VendorShippingCost, StringFormat=c}" Grid.Column="1" HorizontalAlignment="Center"
-                               VerticalAlignment="Center"/>
+                    <TextBlock Text="Shipping Cost" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5, 0, 0, 0"/>
+                    <TextBlock Text="{Binding Path=VendorShippingCost, StringFormat=c}" Grid.Column="1" HorizontalAlignment="Right"
+                               VerticalAlignment="Center" Margin="0, 0, 5, 0"/>
                 </Grid>
             </Grid>
         </ScrollViewer>
