--- a/BuddhaBowls/UserControls/PAndLControl.xaml
+++ b/BuddhaBowls/UserControls/PAndLControl.xaml
@@ -21,7 +21,7 @@
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <DataGrid x:Name="dataGrid" ItemsSource="{Binding Summaries}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                                  CanUserReorderColumns="False" IsReadOnly="{Binding ReadOnly}" AutoGenerateColumns="False" CanUserSortColumns="False"
+                                  CanUserReorderColumns="False" IsReadOnly="True" AutoGenerateColumns="False" CanUserSortColumns="False"
                                   CanUserAddRows="False" Margin="0, 0, 0, 20" RowEditEnding="dataGrid_RowEditEnding">
                             <DataGrid.Columns>
                                 <DataGridTextColumn Binding="{Binding Name}" Width="1*">
