--- a/BuddhaBowls/UserControls/NewOrder.xaml
+++ b/BuddhaBowls/UserControls/NewOrder.xaml
@@ -26,6 +26,8 @@
                 <ColumnDefinition Width="5*" />
                 <ColumnDefinition Width="2*" />
             </Grid.ColumnDefinitions>
+            <CheckBox Grid.Column="0" Content="Receipt" IsChecked="{Binding IsReceipt}" HorizontalAlignment="Left" VerticalAlignment="Top"
+                      Margin="10, 23, 0, 0"/>
             <Label x:Name="label3" Content="Item Name:" HorizontalAlignment="Center" Margin="-260,20,0,0" Grid.Column="0" VerticalAlignment="Top"/>
             <TextBox x:Name="FilterOrderItemBox" HorizontalAlignment="Center" Height="22" Margin="0,20,0,0" Grid.Column="0" TextWrapping="Wrap"
                      VerticalAlignment="Top" Width="180" Controls:TextBoxHelper.Watermark="Filter by item name..." 
