--- a/BuddhaBowls/UserControls/BreadGuideControl.xaml
+++ b/BuddhaBowls/UserControls/BreadGuideControl.xaml
@@ -23,7 +23,15 @@
                                      Margin="0,0,0,2" />
 
         <TextBlock Text="{Binding SquareProgMessage}" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0, 5, 350, 0" />
-        <ItemsControl Grid.Row="1" ItemsSource="{Binding BreadOrderList[0].BreadDescDict.Values}" HorizontalAlignment="Right"
+        <Grid Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Width="175">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3*" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="Backup: " Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0, 0, 5, 0" />
+            <TextBox Text="{Binding Backup}" Grid.Column="1" HorizontalAlignment="Left" Width="40"/>
+        </Grid>
+        <!--<ItemsControl Grid.Row="1" ItemsSource="{Binding BreadOrderList[0].BreadDescDict.Values}" HorizontalAlignment="Right"
                       VerticalAlignment="Stretch" Width="200">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
@@ -38,7 +46,7 @@
                     </Grid>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
-        </ItemsControl>
+        </ItemsControl>-->
         <Button Content="Update From Square" Grid.Row="1" Width="130" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0, 5, 205, 0"
                 Command="{Binding SquareCommand}" />
 
