--- a/BuddhaBowls/UserControls/BreadGuideControl.xaml
+++ b/BuddhaBowls/UserControls/BreadGuideControl.xaml
@@ -23,15 +23,15 @@
                                      Margin="0,0,0,2" />
 
         <TextBlock Text="{Binding SquareProgMessage}" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0, 5, 350, 0" />
-        <Grid Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Width="175">
+        <!--<Grid Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Width="175">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="3*" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
             <TextBlock Text="Backup: " Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0, 0, 5, 0" />
             <TextBox Text="{Binding Backup}" Grid.Column="1" HorizontalAlignment="Left" Width="40"/>
-        </Grid>
-        <!--<ItemsControl Grid.Row="1" ItemsSource="{Binding BreadOrderList[0].BreadDescDict.Values}" HorizontalAlignment="Right"
+        </Grid>-->
+        <ItemsControl Grid.Row="1" ItemsSource="{Binding BreadOrderList[0].BreadDescDict.Values}" HorizontalAlignment="Right"
                       VerticalAlignment="Stretch" Width="200">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
@@ -40,13 +40,14 @@
                             <ColumnDefinition Width="3*" />
                             <ColumnDefinition Width="1*" />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Text="{Binding Path=Name, StringFormat='{}{0} Par Factor:'}" Grid.Column="0" HorizontalAlignment="Right"
+                        <TextBlock Text="{Binding Path=Name, StringFormat='{}{0} Backup:'}" Grid.Column="0" HorizontalAlignment="Right"
                                VerticalAlignment="Center" Margin="0, 0, 5, 0" />
-                        <TextBox Text="{Binding ParFactor}" Grid.Column="1" HorizontalAlignment="Left" Width="30" TextChanged="TextBox_TextChanged" />
+                        <TextBox Text="{Binding Backup, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" HorizontalAlignment="Left" Width="30"
+                                 TextChanged="TextBox_TextChanged" />
                     </Grid>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
-        </ItemsControl>-->
+        </ItemsControl>
         <Button Content="Update From Square" Grid.Row="1" Width="130" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0, 5, 205, 0"
                 Command="{Binding SquareCommand}" />
 
