--- a/BuddhaBowls/UserControls/ViewOrderTabControl.xaml
+++ b/BuddhaBowls/UserControls/ViewOrderTabControl.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              xmlns:local="clr-namespace:BuddhaBowls.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="800">
@@ -12,13 +13,21 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="40" />
         </Grid.RowDefinitions>
-        <TextBlock Text="View Order Header" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="24" />
+        <TextBlock Text="{Binding Header}" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="24" />
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="5*" />
                 <!--<ColumnDefinition Width="2*" />
                 <ColumnDefinition Width="5*" />-->
             </Grid.ColumnDefinitions>
+            <Button Grid.Row="0" Height="30"  Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right"
+                VerticalAlignment="Top" Margin="0, 5, 135, 0" Command="{Binding AddNewItemCommand}">
+                <iconPacks:PackIconFontAwesome Kind="Plus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+            </Button>
+            <Button Grid.Row="0" Height="30" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right"
+                VerticalAlignment="Top" Margin="0, 5, 105, 0" Command="{Binding DeleteItemCommand}">
+                <iconPacks:PackIconFontAwesome Grid.Row="2" Kind="Minus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+            </Button>
             <local:BreakdownDisplay Grid.Column="0" DataContext="{Binding BreakdownContext}" />
             <Grid Grid.Column="1">
                 <Grid.RowDefinitions>
