--- a/BuddhaBowls/UserControls/NewRecipe.xaml
+++ b/BuddhaBowls/UserControls/NewRecipe.xaml
@@ -25,7 +25,7 @@
                 <RowDefinition Height="40" />
                 <RowDefinition Height="40" />
                 <RowDefinition Height="40" />
-                <RowDefinition Height="*" />
+                <RowDefinition Height="9*" />
             </Grid.RowDefinitions>
             <Label Grid.Column="0" Grid.Row="0" Content="Name:" Margin="10, 0" HorizontalAlignment="Right" VerticalAlignment="Center"
                                 HorizontalContentAlignment="Right" Height="28"/>
@@ -45,7 +45,7 @@
                                 HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" Height="25" Margin="10, 0" />
             <Border Grid.Row="4" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="1"
                     BorderBrush="Black" Margin="0, 4, 0, 0" />
-            <DataGrid ItemsSource="{Binding ProportionDetails}" Grid.Row="4" Grid.ColumnSpan="2" HorizontalAlignment="Stretch"
+            <DataGrid ItemsSource="{Binding Item.ProportionDetails}" Grid.Row="4" Grid.ColumnSpan="2" HorizontalAlignment="Stretch"
                       VerticalAlignment="Stretch" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="True"
                       ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="1, 5, 0, 1">
                 <DataGrid.Columns>
@@ -65,7 +65,7 @@
                 Margin="0, 30, 5, 0" Command="{Binding RemoveItemCommand}">
             <iconPacks:PackIconFontAwesome Grid.Row="2" Kind="Minus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         </Button>
-        <DataGrid Grid.Column="2" ItemsSource="{Binding Ingredients}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="1, 60, 1, 30"
+        <DataGrid Grid.Column="2" ItemsSource="{Binding Item.ItemList}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="1, 60, 1, 30"
                 ScrollViewer.VerticalScrollBarVisibility="Auto" SelectedItem="{Binding SelectedItem}" AutoGenerateColumns="False"
                 CanUserAddRows="False" RowEditEnding="Ingredients_RowEditEnding">
             <DataGrid.Columns>
@@ -83,7 +83,7 @@
             <Run Text="{Binding Path=Item.RecipeUnitConversion}"/>
             <Run Text="{Binding Item.RecipeUnit}" />
         </TextBlock>
-        <TextBlock Text="{Binding Path=RecipeCost, StringFormat=Cost: {0:C}}" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Bottom"
+        <TextBlock Text="{Binding Path=Item.TotalCost, StringFormat=Cost: {0:C}}" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Bottom"
                    Margin="0, 0, 10, 2" FontSize="16" FontWeight="Bold"/>
     </Grid>
 </UserControl>
