Adds year to the period selector

--- a/BuddhaBowls/UserControls/PeriodSelectorControl.xaml
+++ b/BuddhaBowls/UserControls/PeriodSelectorControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BuddhaBowls.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="30" d:DesignWidth="535">
+             d:DesignHeight="30" d:DesignWidth="735">
     <Grid SizeChanged="Grid_SizeChanged">
         <Label Content="Period:" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5, 0, 0, 0" />
         <ComboBox Grid.Row="1" ItemsSource="{Binding PeriodList}" SelectedItem="{Binding SelectedPeriod}" HorizontalAlignment="Left"
@@ -13,7 +13,10 @@
         <Label Content="Week:" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="215, 0, 0, 0" />
         <ComboBox Grid.Row="1" ItemsSource="{Binding WeekList}" SelectedItem="{Binding SelectedWeek}" HorizontalAlignment="Left"
                   VerticalAlignment="Center" Margin="260, 0, 0, 0" Width="150"/>
-        <Button Content="Current Week" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="420, 0, 0, 0" Visibility="{Binding CurWeekVisibility}"
-                Command="{Binding CurWeekCommand}"/>
+        <Label Content="Year:" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="415, 0, 0, 0" />
+        <ComboBox Grid.Row="1" ItemsSource="{Binding Years}" SelectedItem="{Binding SelectedYear}" HorizontalAlignment="Left"
+                  VerticalAlignment="Center" Margin="450, 0, 0, 0" Width="150"/>
+        <Button Content="Current Week" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="620, 0, 0, 0"
+                Visibility="{Binding CurWeekVisibility}" Command="{Binding CurWeekCommand}"/>
     </Grid>
 </UserControl>
