--- a/BuddhaBowls/UserControls/MasterInventoryControl.xaml
+++ b/BuddhaBowls/UserControls/MasterInventoryControl.xaml
@@ -16,5 +16,6 @@
                 Margin="0, 0, 220, 2" Command="{Binding InvListCommand}" />
         <Button Grid.Row="0" Content="New Inventory" Width="100" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0, 20, 40, 0"
                 Command="{Binding AddCommand}"/>
+        <Button Grid.Row="0" Content="Fix Yields" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10, 20, 0, 0" Command="{Binding FixYieldCommand}"/>
     </Grid>
 </UserControl>
